--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -34,7 +34,7 @@ p {
 
 .latest {
     background-color: white;
-    height: 1300px;
+    height: auto;
 }
 
 .links {
@@ -56,14 +56,25 @@ p {
     border: 2px solid green;
     width: 270px;
 }
-.col-2 > p > svg{
-    border: 1px solid yellow;
-    align-items: center;
-}
-.px-2 .col-2 > img{
+.px-2 .col-4 > img{
     height: 120px;
 }
-.px-2 .col-2{
-    width: 200px;
-    border: 2px solid orange;
+.px-2 .col-4{
+    max-width: 280px;
+    border: 2px solid orange; 
+    
+}
+.links{
+    background-color: #3b3b3b;
+    color: white;
+    height: auto;
+}
+.links .col-3{
+    border: 2px solid seagreen;
+    min-width: 200px;
+    max-width: auto;
+}
+.col-3 > p{
+    text-align: left;
+    border: 2px solid skyblue;
 }
